# freedesktop

./: Cargo.toml  Makefile
freedesktop/: Cargo.toml  README.md
freedesktop-apps/: Cargo.toml
freedesktop-apps/src/: lib.rs  parser.rs
freedesktop-apps/tests/: parser_tests.rs
freedesktop-cli/: Cargo.toml
freedesktop-cli/src/: main.rs
freedesktop-core/src/: lib.rs
freedesktop-icon/: Cargo.toml  README.md
freedesktop-icon/src/: lib.rs
freedesktop/src/: lib.rs
