[package]
name = "freedesktop-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
freedesktop-apps = { path = "../freedesktop-apps" }
freedesktop-core = { version = "0.0.3", path = "../freedesktop-core" }
freedesktop-icon = { path = "../freedesktop-icon" }
