[package]
name = "freedesktop-icon"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
freedesktop-core = { version = "0.0.2", path = "../freedesktop-core" }
rust-ini = "0.21.3"
